--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
   class="sidebar ps"
   data-color="rose"
   data-background-color="black"
-  data-image="../assets/img/faces/avatar.jpg"
+  data-image="{% static 'img/faces/avatar.png' %}"
 >
   <!--
     Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
@@ -290,6 +290,6 @@
   </div>
   <div
     class="sidebar-background"
-    style="background-image: url(../assets/img/faces/avatar.jpg)"
+    style="background-image: url('static/img/faces/avatar.png')"
   ></div>
 </div>
