--- a/templates/auth_base.html
+++ b/templates/auth_base.html
@@ -70,7 +70,7 @@
     <!--  Notifications Plugin    -->
     <script src="{% static 'js/plugins/bootstrap-notify.js' %}"></script>
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-    <script src="{% static 'js/material-dashboard.min1c51.js?v=2.1.2' %}  type="></script>
+    <script src="{% static 'material-dashboard.min1c51.js' %}"></script>
     <!-- Material Dashboard DEMO methods, don't include it in your project! -->
     <script src=" {% static 'demo/demo.js' %} "></script>
     <script>
@@ -327,30 +327,7 @@
             "https://demos.creative-tim.com/material-dashboard-pro/examples/dashboard.html",
         });
 
-        // Facebook Pixel Code Don't Delete
-        !(function (f, b, e, v, n, t, s) {
-          if (f.fbq) return;
-          n = f.fbq = function () {
-            n.callMethod
-              ? n.callMethod.apply(n, arguments)
-              : n.queue.push(arguments);
-          };
-          if (!f._fbq) f._fbq = n;
-          n.push = n;
-          n.loaded = !0;
-          n.version = "2.0";
-          n.queue = [];
-          t = b.createElement(e);
-          t.async = !0;
-          t.src = v;
-          s = b.getElementsByTagName(e)[0];
-          s.parentNode.insertBefore(t, s);
-        })(
-          window,
-          document,
-          "script",
-          "../../../connect.facebook.net/en_US/fbevents.html"
-        );
+
 
         try {
           fbq("init", "111649226022273");
@@ -359,39 +336,6 @@
           console.log("Facebook Track Error:", err);
         }
       });
-    </script>
-    <script>
-      // Facebook Pixel Code Don't Delete
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "../../../connect.facebook.net/en_US/fbevents.html"
-      );
-
-      try {
-        fbq("init", "111649226022273");
-        fbq("track", " PageView ");
-      } catch (err) {
-        console.log("Facebook Track Error:", err);
-      }
     </script>
     <noscript>
       <img
